terraform/network-policies/all-namespaces.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-namespaces-egress
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector: {}
  policyTypes:
  - Ingress
  - Egress
